--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@
 .idea/modules.xml
 .idea/PowerBI.iml
 .idea/vcs.xml
+exercises/13_objectifs/objectifs/part1.xlsx
+exercises/13_objectifs/objectifs/part2.xlsx
+exercises/13_objectifs/objectifs/part3.xlsx
+exercises/13_objectifs/objectifs/part4.xlsx
+exercises/13_objectifs/objectifs/folder/text.txt
