--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,40 @@
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#ffd619",
         "activityBar.background": "#ffd619",
-        "sash.hoverBorder": "#ffd619",
-        "statusBar.background": "#e5bc00",
-        "statusBarItem.hoverBackground": "#b29200",
         "statusBarItem.remoteBackground": "#e5bc00",
         "titleBar.activeBackground": "#e5bc00",
-        "titleBar.inactiveBackground": "#e5bc0099",
-        "statusBar.debuggingBackground": "#0029e5",
         "editorGroup.border": "#ffd619",
         "panel.border": "#ffd619",
-        "sideBar.border": "#ffd619",
+        "sash.hoverBorder": "#ffd619",
         "statusBar.border": "#e5bc00",
-        "statusBar.debuggingBorder": "#0029e5",
-        "titleBar.border": "#e5bc00",
+        "sash.hoverBorder": #ffd619,
+        "sideBar.border": "#ffd619",
+        "statusBar.border": "#ffd619",
+        "statusBar.background": "#e5bc00",
+        "statusBar.debuggingBorder": "#5000e5",
+        "statusBar.debuggingBackground": "#5000e5",
+        "titleBar.inactiveBackground": "#000",
+        "statusBarItem.hoverBackground": "#000",
+        "statusBarItem.remoteBackground": "#fffb00",
         "tab.activeBorder": "#ffd619",
-        "editorError.foreground": "#000000ff",
-        "editorInfo.foreground": "#000000ff",
-        "editorWarning.foreground": "#000000ff"
+        "titleBar.border": "#e5bc00",
+        "titleBar.activeBackground": "#e5bc00",
+        "titleBar.inactiveBackground": "#e5bc00",
+        "editorError.foreground": "#000",
+        "editorInfo.foreground": "#000",
+        "editorGroup.border": "#e5bc00",
+        "editorWarning.foreground": "#000"
     },
-    "peacock.color": "#e5bc00"
+    "peacock.color": "#e5bc00",
+    "peacock.secondColor"{
+    "peacock.secondColor": "#ffd619",
+    "peacock.showCurrentColor": true,
+    "peacock.showCurrentColorInStatusBar": true,
+    "peacock.showCurrentColorInTitleBar": true,
+    "peacock.showCurrentColorInActivityBar": true,
+    "peacock.showCurrentColorInSideBar": true,
+    "peacock.showCurrentColorInEditorGroupHeader": true,
+    "peacock.showCurrentColorInPanelHeader": true,
+    "peacock.showCurrentColorInStatusBarItem": true
+    },
 }
